--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+#Killer Tomatoes
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Killer Tomatoes is a Dev Bootcamp Assignment. 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+A user-driven movie review site using the Open Movie Database API, where reviewers have a reputation determined by user ratings of their reviews. Built with Rails, Javascript, jQuery, and HTML/CSS.
