--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,5 @@
 # Killer Tomatoes
 
-Killer Tomatoes is a Dev Bootcamp Assignment. 
-
+Killer Tomatoes is a project created at Dev Bootcamp. 
 
 A user-driven movie review site using the Open Movie Database API, where reviewers have a reputation determined by user ratings of their reviews. Built with Rails, Javascript, jQuery, and HTML/CSS.
